--- a/src/Components/Gallery/Gallery.css
+++ b/src/Components/Gallery/Gallery.css
@@ -1,10 +1,13 @@
 .app__gallery {
     flex-direction: column;
-    background: var(--color-black);
-    padding: 4rem 0 4rem 6rem;
+    /* background: var(--color-black); */
+    padding: 0px;
     border: black 1px solid;
-
-    width: 100%;    
+    height: 80vh; /* This */
+    width: 100%; 
+    /* position: relative;  */
+    padding: 60px;  
+    background-color: teal;
 }
 
 .app__gallery-content {
@@ -13,9 +16,12 @@
     justify-content: center;
     align-items: flex-start;
     flex-direction: column;
-
-    width: 100%;
-    padding-right: 2rem;
+    position: absolute;
+    height: 100%;
+    /* overflow: hidden; */
+    /* width: 100%; */
+    /* position: relative; */
+    /* padding-right: 2rem; */
 }
 
 .app__gallery-content button {
@@ -26,14 +32,17 @@
     flex: 1;
     display: flex;
     flex-direction: row;
+    height: 100%;
     max-width: 100%;
     position: relative;
 }
 
 .app__gallery-images_container {
     display: flex;
+    border-radius: 20px;
     flex-direction: row;
     width: 100%;
+    height: 100%;
     overflow-x: scroll;
     -ms-overflow-style: none;
     scrollbar-width: none; }
@@ -46,7 +55,8 @@
 .app__gallery-images_card {
     position: relative;
     min-width: 100vw;
-    height: 447px;
+    /* height: 447px; */
+    height: 100%;
     margin-right: 2rem;
 
 }
@@ -68,28 +78,33 @@
     transition: 2s ease;
 }
 
-.app__gallery-images_card:hover img {
-    opacity: .35;
-}
+/* .app__gallery-images_card:hover img {
+    opacity: .75;
+} */
 
-.app__gallery-images_card:hover .gallery__image-icon {
+/* .app__gallery-images_card:hover .gallery__image-icon {
     opacity: 1;
-}
+} */
 
 .app__gallery-images_arrows {
     width: 100%;
+    height: 10vh;
     display: flex;
     justify-content: space-between;
     align-items: center;
 
     padding: 0 1rem;
     position: absolute;
-    bottom: 5%;
+    bottom: 50%;
 }
 
 .gallery__arrow-icon {
     color: var(--color-golden);
     font-size: 2rem;
+    opacity: 1;
+    fill: #fff;
+    height: 2em;
+    width: 2em;
     cursor: pointer;
     background: var(--color-black);
     border-radius: 5px;
