--- a/src/Components/Footer/Footer.css
+++ b/src/Components/Footer/Footer.css
@@ -1,8 +1,7 @@
 .main_container_footer {
     display: flex;
-    height: 60vh;
-    flex-direction: column;
-    /* background-color: grey; */ 
+    /* height: 40vh; */
+    flex-direction: column; 
 }
 
 .top {
@@ -12,7 +11,9 @@
     /* flex-direction: column; */
     justify-content: space-between;
     overflow: hidden;
-    padding: 10px;
+    padding-top: 3px;
+    padding-left: 5%;
+    padding-right: 5%;
 }
 
 .top_right_inner {
@@ -26,8 +27,9 @@
 
 .bottom {
     background-color: dimgray;
-    flex: 2;
-
+    flex: 1;
+    padding-left: 5%;
+    padding-right: 5%;
     display: flex;
     flex-direction: row;
 }
