--- a/src/Components/Laurels/LaurelBlocks.css
+++ b/src/Components/Laurels/LaurelBlocks.css
@@ -1,7 +1,7 @@
-.courses_card {
+.achiever_card {
     position: relative;
     min-width: 301px;
-    height: 30vh;
+    height: 50vh;
     margin-right: 2rem;
     padding: 1%;
     align-content: center;
@@ -15,10 +15,10 @@
     display: block;
     margin-left: auto;
     margin-right: auto;
-    /* margin-bottom: 0; */
     object-fit: cover;
     width: 100px;
     align-items: center;
+    margin-bottom: 20px;
                     
 }
 
@@ -29,6 +29,7 @@
     margin-right: auto;
     align-items: center;
     font-family: "Times New Roman", Times, serif;
+    color: white;
 } 
 
 
