--- a/src/Components/Laurels/Laurels.css
+++ b/src/Components/Laurels/Laurels.css
@@ -1,15 +1,26 @@
-.main {
+.main_laurels {
+    height: 100vh;
+    background-color:black;
     display: flex;
-    /* height: 100vh; */
     flex-direction: column;
-    background-image: url("../../assets/bgCourses.jpg");
-    overflow: hidden;
-    /* margin-top: 1%; */
     padding-bottom: 2%;
     padding-top: 2%;
 }
 
-.cards_div {
+.achievements_heading {
+    padding: 15px;
+    color: aliceblue;
+    margin-bottom: 20px;
+    font-size: 50px;
+    font-weight: 600;
+    font-family: var(--font-base);
+}
+
+.achievements_heading h1 {
+    text-align: center;
+}
+
+.laurel_div {
     display: flex;
     flex-wrap: wrap;
     overflow: hidden;
@@ -19,36 +30,23 @@
     justify-content: center;
 }
 
-.courses_heading {
-    position: relative;
-    display: flex;  
-    flex-direction: column;
-    padding-top: 1%;
-    padding-bottom: 2%;
-    color: white;
-    font-family: "Lucida Console", "Courier New", monospace;
-    align-items: center;
-    font-size: 40px;
-}
-
-
-.viewMore {
+.moreLaurels {
     position: relative;
     cursor: pointer;
     display: flex;  
     flex-direction: column;
     padding-top: 3%;
     padding-bottom: 3%;
+    /* margin-bottom: 1%; */
     color: white;
     font-family: "Lucida Console", "Courier New", monospace;
     align-items: center;
     font-size: 20px;
 }
 
-.viewMore a:hover {
+.moreLaurels a:hover {
     color: pink;
     font-family: "Lucida Console", "Courier New", monospace;
     align-items: center;
     font-size: 20px;
 }
-
