--- a/src/Components/Courses/Dabbas.css
+++ b/src/Components/Courses/Dabbas.css
@@ -1,13 +1,12 @@
 .courses_card {
     position: relative;
     min-width: 301px;
-    height: 30vh;
+    height: 410px;
     margin-right: 2rem;
     padding: 1%;
     align-content: center;
     justify-content: center;
     align-items: center;
-    border-color: aliceblue;
     
 }
 
@@ -15,9 +14,8 @@
     display: block;
     margin-left: auto;
     margin-right: auto;
-    /* margin-bottom: 0; */
     object-fit: cover;
-    width: 100px;
+    width: 200px;
     align-items: center;
                     
 }
@@ -29,12 +27,12 @@
     margin-right: auto;
     align-items: center;
     font-family: "Times New Roman", Times, serif;
+    
 } 
 
 
 .heading_design {
     display: flex;
-    color: aliceblue;
     margin-left: auto;
     margin-right: auto;
     flex-direction: column;
@@ -52,10 +50,10 @@ a {
 }
 
 .learn_more_btn {
-    background-color: sandybrown;
+    background-color: gray;
     border-radius: 8px;
     padding: 5px;
-    margin: 15px;
+    margin: 5px;
     color: white; 
     font-weight: 500;
     font-family: "Lucida Console", "Courier New", monospace;
