--- a/src/Components/Gallery/Gallery.css
+++ b/src/Components/Gallery/Gallery.css
@@ -7,7 +7,8 @@
     width: 100%; 
     /* position: relative;  */
     padding: 60px;  
-    background-color: teal;
+    border-radius: 43px;
+    background: #C5E3EC;
 }
 
 .app__gallery-content {
@@ -17,7 +18,8 @@
     align-items: flex-start;
     flex-direction: column;
     position: absolute;
-    height: 100%;
+    width: 1758.48px;
+    height: 545px;
     /* overflow: hidden; */
     /* width: 100%; */
     /* position: relative; */
