--- a/src/Components/Navbar/Navbarr.css
+++ b/src/Components/Navbar/Navbarr.css
@@ -7,6 +7,7 @@
     justify-content: space-between;
     align-items: center;
     padding: 1rem 2rem;
+    background-color: white;
 }
 
 .navbar_image {
