--- a/src/Components/Courses/Courses.css
+++ b/src/Components/Courses/Courses.css
@@ -2,11 +2,13 @@
     display: flex;
     /* height: 100vh; */
     flex-direction: column;
-    background-image: url("../../assets/bgCourses.jpg");
+    /* background-image: url("../../assets/bgCourses.jpg"); */
+    background-color: #fff;
     overflow: hidden;
-    /* margin-top: 1%; */
-    padding-bottom: 2%;
+    /* margin-bottom: 1%;  */
+    padding-bottom: 5%;
     padding-top: 2%;
+    border: 2px solid black;
 }
 
 .cards_div {
@@ -25,10 +27,10 @@
     flex-direction: column;
     padding-top: 1%;
     padding-bottom: 2%;
-    color: white;
-    font-family: "Lucida Console", "Courier New", monospace;
+    color: black;
+    font-family: "Jost";
     align-items: center;
-    font-size: 40px;
+    font-size: 48px;
 }
 
 
