--- a/src/Components/Gallery/Gallery.css
+++ b/src/Components/Gallery/Gallery.css
@@ -3,11 +3,12 @@
     /* background: var(--color-black); */
     padding: 0px;
     border: black 1px solid;
+    border-top: 0;
     height: 80vh; /* This */
     width: 100%; 
     /* position: relative;  */
     padding: 60px;  
-    background-color: teal;
+    background-color: aliceblue;
 }
 
 .app__gallery-content {
@@ -18,6 +19,7 @@
     flex-direction: column;
     position: absolute;
     height: 100%;
+    /* border: black 2px solid; */
     /* overflow: hidden; */
     /* width: 100%; */
     /* position: relative; */
@@ -35,6 +37,7 @@
     height: 100%;
     max-width: 100%;
     position: relative;
+
 }
 
 .app__gallery-images_container {
@@ -45,7 +48,9 @@
     height: 100%;
     overflow-x: scroll;
     -ms-overflow-style: none;
-    scrollbar-width: none; }
+    scrollbar-width: none; 
+    border: black solid 2px;
+}
 
 
 .app__gallery-images_container::-webkit-scrollbar {
