--- a/src/Components/Laurels/Laurels.css
+++ b/src/Components/Laurels/Laurels.css
@@ -1,6 +1,6 @@
 .main_laurels {
     height: 100vh;
-    background-color:black;
+    background-color: aliceblue;
     display: flex;
     flex-direction: column;
     padding-bottom: 2%;
@@ -9,7 +9,7 @@
 
 .achievements_heading {
     padding: 15px;
-    color: aliceblue;
+    color: black;
     margin-bottom: 20px;
     font-size: 50px;
     font-weight: 600;
@@ -38,7 +38,7 @@
     padding-top: 3%;
     padding-bottom: 3%;
     /* margin-bottom: 1%; */
-    color: white;
+    color: black;
     font-family: "Lucida Console", "Courier New", monospace;
     align-items: center;
     font-size: 20px;
