--- a/src/Components/Navbar/Navbarr.css
+++ b/src/Components/Navbar/Navbarr.css
@@ -1,6 +1,6 @@
 @import url('https://fonts.googleapis.com/css?family=Jost');
 .container_main_nav {
-    height: 15vh;
+    height: 12vh;
     width: 100%;
     display: flex;
     /* flex-direction: row; */
@@ -8,6 +8,7 @@
     align-items: center;
     padding: 1rem 2rem;
     background-color: white;
+    margin-bottom: 10px;
 }
 
 .navbar_image {
@@ -69,7 +70,7 @@
     font-size: large;
     color: #000;
 font-family: Jost;
-font-size: 32px;
+font-size: 23px;
 font-style: normal;
 font-weight: 300;
 line-height: normal;
@@ -78,3 +79,11 @@ line-height: normal;
 .navbar_links a:hover {
     color: grey;
 }
+.line {
+    height: 1px;
+    background: #000;
+    display: block;
+    margin: 10px auto; /* Center horizontally with auto margins */
+    width: 95%;
+  }
+  
