--- a/src/Components/Achievements/AchieverBlock.css
+++ b/src/Components/Achievements/AchieverBlock.css
@@ -1,8 +1,8 @@
 .achiever_block {
     position: relative;
     min-width: 150px;
-    height: 40vh;
-    width: 15vw;
+    height: 55vh;
+    width: 20vw;
     /* margin-right: 2rem; */
     margin-top: 30px;
     margin: 50px;
@@ -10,8 +10,8 @@
     align-content: center;
     justify-content: center;
     align-items: center;
-    border-color: black;
-    border: 2px solid;
+    /* border-color: black;
+    border: 2px solid; */
     border-radius: 10%;
     text-align: center;
     
@@ -23,14 +23,16 @@
     margin-right: auto;
     /* margin-bottom: 0; */
     object-fit: cover;
-    width: 150px;
+    width: 100%;
     align-items: center;
     margin-bottom: 15px;               
 }
 
 .achiever_image_div img {
-    border-radius: 50%;   
-    width: 800px;  
+    border-radius: 50%;  
+    /* width: 342px;
+    height: 332px;  */
+    /* width: 1000px;   */
     height: auto;        
 }
 
