--- a/src/Components/ContactUs/ContactUs.css
+++ b/src/Components/ContactUs/ContactUs.css
@@ -4,6 +4,7 @@
     border-left: 2px solid black;
     border-top: 2px solid black;
     padding: 20px;
+    /* width: 100%; */
 }
 
 .contact_heading {
@@ -36,7 +37,7 @@
     align-items: center;
     justify-content: center;
     width: 412px;
-    height: 211px;
+    height: 200px;
     border-radius: 30px;
     background: #C5E3EC;
     margin: 5px;
@@ -48,7 +49,7 @@
     align-items: center;
     justify-content: center;
     width: 412px;
-    height: 211px;
+    height: 200px;
     border-radius: 30px;
     background: #C5E3EC;
     margin: 5px;
@@ -61,9 +62,10 @@
     align-items: center;
     justify-content: center;
     width: 412px;
-    height: 211px;
+    height: 200px;
     border-radius: 30px;
     background: #C5E3EC;
+    margin: 5px;
 }
 
 .contact_mode_text {
@@ -89,11 +91,6 @@
     height: 47.873px;
 }
 
-.contact_form {
-    display: flex;
-    flex-direction: row;
-}
-
 .contact_mode_detail {
     align-items: center;
     align-content: center;
@@ -102,27 +99,36 @@
     margin-top: 20px;
 }
 
-
-.contact_form_details {
-    /* border: 2px solid black; */
+.contact_form {
     display: flex;
     flex-direction: column;
+}
+
+.contact_form_details {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+}
+
+.form_input_cont {
+    display: flex;
+    flex-direction: column;
+    margin: 5px;
     width: 615px;
-    height: 290px;
+    height: 250px;
     border-radius: 30px;
-    /* background: #C5E3EC; */
-    /* border: 2px solid black; */
-    margin: 15px;
+    margin: 10px;
     justify-content: space-between;
 }
 
 .form_input {
-    background: #C5E3EC;
-    margin: 10px;
-    /* margin-top: 0;
-    margin-bottom: 0; */
-    padding: 10px;
     border-radius: 30px;
+    background: #C5E3EC; 
+    /* margin: 15px;
+    margin-top: 10px; */
+    /* width: 615px; */
+    height: 66px;
+    padding: 10px;
 }
 
 .contact_form_message {
@@ -133,10 +139,9 @@
     /* border: 2px solid black; */
     align-self: start;
     width: 615px;
-    height: 290px;
+    height: 250px;
     border-radius: 30px;
     background: #C5E3EC;
-    margin: 15px;
     margin: 10px;
     border-radius: 30px;
     padding: 10px;
