--- a/src/Components/Courses/Courses.css
+++ b/src/Components/Courses/Courses.css
@@ -28,12 +28,12 @@
     padding-top: 1%;
     padding-bottom: 2%;
     color: black;
-    font-family: "Jost";
+    font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     align-items: center;
     font-size: 48px;
 }
 
-
+/* 
 .viewMore {
     position: relative;
     cursor: pointer;
@@ -45,12 +45,12 @@
     font-family: "Lucida Console", "Courier New", monospace;
     align-items: center;
     font-size: 20px;
-}
-
+} */
+/* 
 .viewMore a:hover {
     color: pink;
     font-family: "Lucida Console", "Courier New", monospace;
     align-items: center;
     font-size: 20px;
-}
+} */
 
