--- a/src/Components/Navbar/Navbarr.css
+++ b/src/Components/Navbar/Navbarr.css
@@ -1,4 +1,3 @@
-@import url('https://fonts.googleapis.com/css?family=Jost');
 .container_main_nav {
     height: 15vh;
     width: 100%;
@@ -10,16 +9,17 @@
     background-color: white;
 }
 
-.navbar_image {
+.navbar_logo {
     display: flex;
     justify-content: flex-start;
     align-items: center;
     /* padding-right: 15px; */
 }
 
-.navbar_image img {
+.navbar_logo img {
     height: 80px;
     width: 100px;
+    opacity: 90%;
 }
 
 .navbar_title {
@@ -27,6 +27,10 @@
     justify-content: flex-start;
     align-content: flex-start;
     align-items: flex-start;    
+}
+
+.navbar_small_heading {
+    display: none;
 }
 
 .navbar_title > h1 {
@@ -68,13 +72,117 @@
     font-weight: 600;
     font-size: large;
     color: #000;
-font-family: Jost;
-font-size: 32px;
-font-style: normal;
-font-weight: 300;
-line-height: normal;
+    font-family: Jost;
+    font-size: 32px;
+    font-style: normal;
+    font-weight: 300;
+    line-height: normal;
 } 
 
 .navbar_links a:hover {
     color: grey;
+}
+
+.navbar_smallscreen {
+    display: none;
+
+}
+
+.navbar_smallscreen_overlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100vh;
+    /* background: var(--color-black); */
+    background: white;
+    transition: 0.5s ease;
+    flex-direction: column;
+    z-index: 5;   
+}
+
+.navbar_smallscreen_overlay .overlay__close {
+    font-size: 27px;
+    color: black;
+    cursor: pointer;
+
+    position: absolute;
+    top: 35px;
+    right: 15px;
+}
+
+.navbar_smallscreen_links {
+    list-style: none;
+    /* display: flex;
+    flex-direction: column; */
+}
+
+.navbar_smallscreen_links li {
+    /* display: flex;
+    justify-content: center;
+    align-items: center; */
+    margin: 2rem;
+    cursor: pointer;
+    /* color: yellow; */
+    color: #000;
+    font-size: 2rem;
+    text-align: center;
+    position: relative;
+    display: flex;
+    /* font-family: var(--font-base); */
+}
+
+.navbar_smallscreen_links li:hover {
+    color: white;
+}
+
+/* @media screen and (max-width: 2000px) {
+    .app__navbar-logo img {
+        width: 210px;
+    }
+} */
+
+@media screen and (max-width: 1150px) {
+    .navbar_links {
+        display: none;
+    }
+    .navbar_smallscreen {
+        display: flex;
+    }
+    .navbar_title > h1 {
+        padding-left: 1px;
+    }
+}
+
+@media screen and (max-width: 650px) {
+    .container_main_nav {
+        padding: 0;
+    }
+
+    /* .app__navbar-logo img {
+        width: 100px;
+    } */
+}
+
+@media screen and (max-width: 480px) {
+    .container_main_nav {
+        padding: 10px;
+    }
+
+    .navbar_regular_heading {
+        display: none;
+    }
+
+    .navbar_small_heading {
+        display: block;
+    }
+
+    .navbar_title > h1 {
+        color: #000;
+        font-family: Jost;
+        font-size: 30px;
+        font-style: normal;
+        font-weight: 300;
+        line-height: normal;
+    }
 }
