Revert "stable except courses"
This reverts commit 8808450e6bd71def36ee46a395b245bf5df13a79.

--- a/src/Components/Footer/Footer.css
+++ b/src/Components/Footer/Footer.css
@@ -1,18 +1,15 @@
 .main_container_footer {
     display: flex;
-    height: 300px; 
+    height: 250px; 
     flex-direction: column; 
     /* height: 60vh; */
     flex-direction: column;
-    background-color: #C5E3EC;
-    ;  
+    background-color: #C5E3EC;  
 }
 
 .footer {
-    /* background-color:dimgray; */
     display: flex;
     flex: 1;
-    /* flex-direction: column; */
     justify-content: space-between;
     overflow: hidden;
     padding-top: 3px;
@@ -20,33 +17,23 @@
     padding-right: 5%;
 }
 
-.footer_right_inner {
+.footer_details_inner {
     float: left;
 }
 
-.footer_right_inner > p{
-    font-size: large;
-    font-family: "Lucida Console", "Courier New", monospace;
+.footer_details_inner > p{
+    font-size: 25px;
+    /* font-family: "Lucida Console", "Courier New", monospace; */
 }
 
-.bottom {
-    background-color: dimgray;
-    flex: 1;
-    padding-left: 5%;
-    padding-right: 5%;
-    display: flex;
-    flex-direction: row;
-}
-
-.footer_left {
+.footer_logo_links {
     padding-left: 50px;
     color: white;
-    /* display: flex; */
     flex-direction: row;
-    flex: 1 ;
+    flex: 1;
 }
 
-.footer_middle {
+.footer_enroll {
     display: flex;
     flex: 1;
     align-items: center;
@@ -55,8 +42,12 @@
 
 .enroll_btn {
     background: white;
+    /* border: #000 1px solid; */
     border-radius: 60px;
     padding: 2%;
+    padding-left: 5%;
+    padding-right: 5%;
+
 }
 
 .enroll_btn:hover {
@@ -66,8 +57,7 @@
     padding: 2%;
 }
 
-.footer_right {
-    /* display: flex; */
+.footer_details {
     flex-direction: row;
     flex: 1;
     align-items: flex-end;
@@ -75,55 +65,141 @@
     justify-content: flex-end;
     padding: 10px;
     color: #000000;
-    margin-top: 30px;
+    margin-top: 20px;
 }
 
 .footer_logo {
-    /* padding-left: 30px; */
-    /* margin: 5px; */
     margin-left: 60px;
-    width: 168px;
-    height: 155px;
-    margin-top: 30px;
+    width: 150px;
+    height: 135px;
+    margin-top: 20px;
 }
 
 .follow_links {
-    /* background-color: antiquewhite; */
-    /* width: 40%; */
-    padding: 50px;
-    padding-left: 5px;
+    padding: 30px;
+    padding-left: 0px;
     display: flex;
     flex-direction: row;
     align-items: center;
 } 
 
 .follow_links > p {
-    font-family: "Lucida Console", "Courier New", monospace;
+    /* font-family: "Lucida Console", "Courier New", monospace; */
     padding-right: 10px;
     font-size: 24px;
     text-align: center;
-    font-weight: 300;
+    font-weight: 500;
     color: #000000;
 }
 
-/* .follow_links_icons {
-    margin: 2%;
-} */
+@media screen and (max-width: 2000px) {
 
-/* .inner_bottom {
-    flex: 1;
-    align-items: center;
-    justify-content: center;
-    align-content: center;
-    padding-left: 40px;
-    padding-right: 40px;
-    padding-top: 20px;
 }
 
-.inner_bottom > p{
-    align-items: center;
-    justify-content: center;
-    align-content: center;
-    text-align: center;
-} */
+@media screen and (max-width: 1150px) {
 
+}
+
+@media screen and (max-width: 650px) {
+    .main_container_footer {
+        height: auto; 
+    }    
+    .footer {
+        padding: 0%;
+        display: flex;
+        flex-direction: column;
+    }
+    .footer_logo_links {
+        padding: 100px;
+        padding-top: 10px;
+        padding-bottom: 10px;
+    }
+    .follow_links {
+        padding: 10px;
+        margin-top: 10px;
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+    } 
+    .footer_enroll {
+        margin: 20px
+    }
+    .footer_small_div_line {
+        /* width: 85%; */
+        border-top: 1px solid #000;
+        margin-left: 10px;
+        margin-right: 10px;
+    }
+    .footer_details {
+        /* padding: px; */
+        margin-top: 5px;
+    }
+    .footer_logo_div {
+        padding: 0;
+        justify-content: flex-start;
+    }
+    .footer_logo {
+        /* padding-left: 30px; */
+        margin: 10px;
+        /* margin-left: 60px; */
+        width: 100px;
+        height: 85px;
+        /* margin-top: 30px; */
+    }
+    .follow_links > p {
+        padding-right: 10px;
+        font-size: 20px;
+        font-weight: 100;
+    }
+}
+
+@media screen and (max-width: 480px) {
+    .main_container_footer {
+        height: auto; 
+    }    
+    .footer {
+        padding: 0%;
+        display: flex;
+        flex-direction: column;
+    }
+    .footer_logo_links {
+        padding: 10px;
+    }
+    .follow_links {
+        padding: 10px;
+        margin-top: 10px;
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+    } 
+    .footer_enroll {
+        margin: 20px
+    }
+    .footer_small_div_line {
+        /* width: 85%; */
+        border-top: 1px solid #000;
+        margin-left: 10px;
+        margin-right: 10px;
+    }
+    .footer_details {
+        /* padding: px; */
+        margin-top: 5px;
+    }
+    .footer_logo_div {
+        padding: 0;
+        justify-content: flex-start;
+    }
+    .footer_logo {
+        /* padding-left: 30px; */
+        margin: 10px;
+        /* margin-left: 60px; */
+        width: 100px;
+        height: 85px;
+        /* margin-top: 30px; */
+    }
+    .follow_links > p {
+        padding-right: 10px;
+        font-size: 20px;
+        font-weight: 100;
+    }
+}
