--- a/src/Components/ContactUs/ContactUs.css
+++ b/src/Components/ContactUs/ContactUs.css
@@ -1,7 +1,7 @@
 .contactus {
     /* height: 90vh; */
-    border-right: 2px solid black;
-    border-left: 2px solid black;
+    /* border-right: 2px solid black;
+    border-left: 2px solid black; */
     border-top: 2px solid black;
     padding: 20px;
     /* width: 100%; */
@@ -152,6 +152,8 @@
 .send_message {
     display: flex;
     flex-direction: row;
+    /* justify-content: space-around; */
+    justify-content: right;
 }
 
 .contactus_btn {
@@ -174,3 +176,142 @@
     font-weight: 300;
     line-height: normal;
 }
+
+.contact_info_small {
+    display: none;
+}
+
+@media screen and (max-width: 2000px) {
+
+}
+
+@media screen and (max-width: 1150px) {
+    .contact_phone {
+        width: 25vw;
+        height: 150px;
+    }
+    
+    .contact_email {
+        width: 25vw;
+        height: 150px;
+    
+    }
+    
+    .contact_address {
+        width: 25vw;
+        height: 150px;
+    }
+    
+    .contact_form_details {
+        flex-direction: column;
+    }
+
+    .send_message {
+        justify-content: space-around;
+    }
+}
+
+/* @media screen and (max-width: 650px) {
+    
+} */
+
+@media screen and (max-width: 650px) {
+    .contact_heading {
+        font-size: 35px;
+        margin: 5px;
+    }
+    .contact_info {
+        display: none;
+    }
+    .contact_info_small {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        width: 300px;
+        height: 180px;
+        border-radius: 30px;
+        background: #C5E3EC;
+        margin: 20px;
+        padding: 20px;
+    }    
+    .contact_info_details_small {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        margin: 5px;
+    }
+    .phone_image_small {
+        width: auto;
+        height: 50px;
+    }
+    .email_image_small {
+        width: auto;
+        height: 40ps;
+    }
+    .location_image_small {
+        width: auto;
+        height: 40px;
+    }
+    .contact_mode_detail_small {
+        margin: 10px;
+    }
+    .contact_form {
+        /* margin: 20px; */
+        /* margin-left: 80px; */
+        align-items: center;
+        width: 100%;
+        justify-content: center;
+    }
+    .contact_form_details {
+        display: flex;
+        flex-direction: column;
+        width: 300px;
+        overflow: hidden;   
+        padding: 0;
+        margin: 0;
+        margin-top: 10px;
+    }
+    .form_input_cont {
+        width: 100%;
+        border-radius: 30px;
+        height: 150px;
+        margin: 0;
+        margin-bottom: 10px;
+    }
+    .form_input {
+        height: 45px;
+        width: 100%;
+        padding: 10px;
+        align-items: center;
+        align-content: center;
+    }
+    .contact_form_message {
+        /* width: 100%; */
+        align-items: center;
+        padding: 0%;
+    }
+    .form_message{
+        width: 100%;
+        height: 150px;
+        margin: 0;
+        margin-top: 20px;
+        margin-bottom: 20px;
+    }
+    .send_message {
+        display: flex;
+        justify-content: space-around;
+    }
+    .contactus_btn {
+        width: 150px;
+        height: 50px;
+        border-radius: 30px;
+        background: #C5E3EC;
+        margin: 10px;
+    }
+    .contactus_btn_text {
+        font-size: 20px;
+    }
+}
+
+
