--- a/src/Components/ContactUs/Email.css
+++ b/src/Components/ContactUs/Email.css
@@ -1,5 +1,5 @@
 .main_container_email {
-   /* background-image: url("../../assets/bgWrite.jpg"); */
+   background-image: url("../../assets/bgWrite.jpg");
    background-color: white;
    width: 100%; /* Make sure the container takes the full width of its parent */
    height: 75vh;
