--- a/src/Components/Courses/Dabbas.css
+++ b/src/Components/Courses/Dabbas.css
@@ -8,6 +8,7 @@
     justify-content: center;
     align-items: center;
     /* border-color: black; */
+    /* border: gray solid; */
     
 }
 
@@ -17,16 +18,17 @@
     margin-right: auto;
     /* margin-bottom: 0; */
     /* object-fit: cover; */
-    /* width: 214px;
-    height: 213px; */
+    width: 214px;
+    height: 213px;
     align-items: center;
                     
 }
 
-/* .image_div img {
-    width: 214px;
-    height: 213px;
-} */
+.image_div img {
+    width: 100%;
+    height: auto;
+    overflow: hidden;
+}
 
 /* .text_design {
     display: flex;
@@ -80,3 +82,24 @@
     font-weight: 700;
     line-height: normal;
 }
+
+@media screen and (max-width: 1150px) {
+    .courses_card {
+        min-width: 150px;
+        margin-right: 1rem;
+        padding: 10px;        
+    }
+}
+
+/* @media screen and (max-width: 650px) {
+
+} */
+
+@media screen and (max-width: 650px) {
+    .courses_card {
+        min-width: 150px;
+        margin-right: 1rem;
+        padding: 10px;        
+    }
+}
+
