--- a/src/Components/Gallery/Gallery.css
+++ b/src/Components/Gallery/Gallery.css
@@ -8,7 +8,8 @@
     width: 100%; 
     /* position: relative;  */
     padding: 60px;  
-    border-radius: 43px;
+    /* border-radius: 43px; */
+    border: 1px solid black;
     background: #C5E3EC;
 }
 
@@ -16,15 +17,14 @@
     /* flex: 2; */
     display: flex;
     justify-content: center;
-    align-items: flex-start;
+    /* align-items: flex-start; */
     flex-direction: column;
     position: absolute;
-    width: 1758.48px;
-    height: 545px;
-    /* overflow: hidden; */
-    /* width: 100%; */
-    /* position: relative; */
-    /* padding-right: 2rem; */
+    /* width: 1758.48px; */
+    width: 100%;
+    /* height: 545px; */
+    height: 100%;
+    overflow: hidden;
 }
 
 .app__gallery-content button {
@@ -38,6 +38,7 @@
     height: 100%;
     max-width: 100%;
     position: relative;
+    /* overflow: hidden; */
 
 }
 
@@ -121,7 +122,7 @@
 }
 
 @media screen and (min-width: 2000px) {
-    .app__gallery-content button {
+    /* .app__gallery-content button {
         margin-top: 2rem;
     }
 
@@ -133,22 +134,22 @@
     .app__gallery-images_card {
         min-width: 400px;
         height: 547px;
-    }
+    } */
 }
 
 @media screen and (max-width: 1150px) {
-    .app__gallery {
+    /* .app__gallery {
         flex-direction: column;
     }
 
     .app__gallery-images {
         max-width: 100%;
         margin: 5rem 0;
-    }
+    } */
 }
 
 @media screen and (max-width: 850px) {
-    .app__gallery {
+    /* .app__gallery {
         padding: 4rem 0 4rem 4rem;
     }
 }
@@ -165,5 +166,5 @@
     .app__gallery-images_card {
         min-width: 240px;
         height: 320px;
-    }
+    } */
 }
