--- a/src/Components/Gallery/Gallery.css
+++ b/src/Components/Gallery/Gallery.css
@@ -14,16 +14,15 @@
 }
 
 .app__gallery-content {
-    /* flex: 2; */
-    display: flex;
-    justify-content: center;
-    /* align-items: flex-start; */
-    flex-direction: column;
-    position: absolute;
-    /* width: 1758.48px; */
-    width: 100%;
-    /* height: 545px; */
-    height: 100%;
+    .app__gallery-content {
+        display: flex;
+        justify-content: center;
+        flex-direction: column;
+        width: 100%;
+        height: 100%;
+        overflow: hidden;
+    }
+    
     overflow: hidden;
 }
 
@@ -108,18 +107,21 @@
 .gallery__arrow-icon {
     color: var(--color-golden);
     font-size: 2rem;
-    opacity: 1;
+    opacity: 0.5; /* Decrease the initial opacity */
     fill: #fff;
     height: 2em;
     width: 2em;
     cursor: pointer;
     background: var(--color-black);
     border-radius: 5px;
+    transition: opacity 0.5s; /* Add a transition for smooth hover effect */
 }
 
 .gallery__arrow-icon:hover {
+    opacity: 1; /* Increase opacity on hover */
     color: var(--color-white);
 }
+
 
 @media screen and (min-width: 2000px) {
     /* .app__gallery-content button {
