--- a/src/Components/Footer/Footer.css
+++ b/src/Components/Footer/Footer.css
@@ -97,7 +97,30 @@
 }
 
 @media screen and (max-width: 1150px) {
-
+    .follow_links {
+        padding: 10px;   
+        margin: 10px;
+        width: 100%;
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        
+    } 
+    .follow_links > p {
+        padding-right: 10px;
+        font-size: 15px;
+        font-weight: 500;
+    }
+    .footer_logo_links {
+        /* padding: 100px; */
+        padding-left: 10px;
+        padding-top: 10px;
+        padding-bottom: 10px;
+    }
+    .footer_details_inner > p {
+        font-size: 22px;
+        /* align-items: center; */
+    }
 }
 
 @media screen and (max-width: 650px) {
@@ -149,7 +172,7 @@
     .follow_links > p {
         padding-right: 10px;
         font-size: 20px;
-        font-weight: 100;
+        font-weight: 500;
     }
 }
 
@@ -164,6 +187,7 @@
     }
     .footer_logo_links {
         padding: 10px;
+
     }
     .follow_links {
         padding: 10px;
@@ -171,6 +195,7 @@
         display: flex;
         flex-direction: row;
         align-items: center;
+        justify-content:space-around;
     } 
     .footer_enroll {
         margin: 20px
@@ -184,10 +209,22 @@
     .footer_details {
         /* padding: px; */
         margin-top: 5px;
+        display: flex;
+        justify-content: space-around;
+
+    }
+    .footer_details_inner > p {
+        font-size: 20px;
+        /* align-items: center; */
     }
     .footer_logo_div {
         padding: 0;
-        justify-content: flex-start;
+        display: flex;
+        justify-content: space-around;
+        /* align-items: center;
+        align-content: center;
+        align-self: center;
+        justify-content:space-between; */
     }
     .footer_logo {
         /* padding-left: 30px; */
