--- a/src/Components/Teachers/teacher.css
+++ b/src/Components/Teachers/teacher.css
@@ -1,6 +1,12 @@
 .teacher_main { 
     border: 1px solid black;
     padding: 20px;
+    /* padding-bottom: 40px; */
+}
+
+.teacher_main_sub {
+    margin: 10px;
+    /* margin-bottom: 0; */
 }
 
 .teachers_heading {
@@ -17,4 +23,52 @@
 
 .head{
      padding-bottom: 30px;
+}
+
+/* .teacher_block_main {
+    width: 80%;
+} */
+
+.teacher_division {
+    display: none;
+}
+
+@media screen and (max-width: 1150px) {
+
+}
+
+@media screen and (max-width: 650px) {
+
+}
+
+@media screen and (max-width: 480px) {
+    .teacher_blocks {
+        display: flex;
+        flex-direction: column;
+    }
+    .teachers_heading {
+        font-size: 40px;
+    }
+    .teacher_image {
+        margin: 0;
+        width: 100%;
+        /* height: 100%; */
+        overflow: hidden;
+    }
+    .teacher_details {
+        width: 100%;
+        padding: 2%;
+        padding-bottom: 5%;
+    }
+    .teacher_image_div {
+        width: 100%;
+        margin: 0;
+        padding: 0;
+    }
+    .teacher_division {
+        margin-top: 40px;
+        width: 100%;
+        background-color: black;
+        height: 2px;
+    }
 }
