--- a/src/Components/Yt/yt.css
+++ b/src/Components/Yt/yt.css
@@ -1,7 +1,8 @@
 .youtube_main {
     border: 1px solid black;
     padding: 20px;
-    height: 70vh;
+    /* height: 70vh; */
+    /* overflow: hidden; */
 }
 
 .youtube_title {
