--- a/src/Components/Gallery/Gallery.css
+++ b/src/Components/Gallery/Gallery.css
@@ -14,6 +14,7 @@
 }
 
 .app__gallery-content {
+    overflow: hidden;
     .app__gallery-content {
         display: flex;
         justify-content: center;
@@ -22,8 +23,6 @@
         height: 100%;
         overflow: hidden;
     }
-    
-    overflow: hidden;
 }
 
 .app__gallery-content button {
@@ -122,18 +121,9 @@
     color: var(--color-white);
 }
 
+@media screen and (max-width: 850px) {
 
-@media screen and (min-width: 2000px) {
-    /* .app__gallery-content button {
-        margin-top: 2rem;
-    }
-
-    .app__gallery-content {
-        min-width: 1000px;
-        padding-right: 4rem;
-    }
-
-    .app__gallery-images_card {
+    /* .app__gallery-images_card {
         min-width: 400px;
         height: 547px;
     } */
@@ -151,22 +141,9 @@
 }
 
 @media screen and (max-width: 850px) {
-    /* .app__gallery {
-        padding: 4rem 0 4rem 4rem;
-    }
-}
-
-@media screen and (max-width: 650px) {
     .app__gallery {
-        padding: 4rem 0 4rem 2rem;
-    }  
-    
-    .app__gallery-content {
-        min-width: 100%;
+        height: 50vh;
+        padding: 15px;
     }
 
-    .app__gallery-images_card {
-        min-width: 240px;
-        height: 320px;
-    } */
 }
