--- a/src/Components/Footer/Footer.css
+++ b/src/Components/Footer/Footer.css
@@ -78,14 +78,14 @@
 }
 
 .footer_details {
-    flex-direction: row;
+    flex-direction: column;
     flex: 1;
-    align-items: flex-end;
+    /* align-items: flex-end;
     align-content: flex-end  ;
-    justify-content: flex-end;
+    justify-content: flex-end; */
     padding: 10px;
     color: #000000;
-    margin-top: 20px;
+    /* margin-top: 20px; */
 }
 
 .footer_logo {
@@ -114,8 +114,10 @@
 
   /* Set a maximum width for the map container to ensure it doesn't overflow the footer */
   .footer_map-container {
-    max-width: 50%; /* Adjust the width as needed */
-    height: 200px; /* Set a fixed height for the map container */
+    /* max-width: 50%;  */
+    /* Adjust the width as needed */
+    /* height: 200px;  */
+    /* Set a fixed height for the map container */
     overflow: hidden; /* Hide any overflow */
   }
   
@@ -232,7 +234,10 @@
         justify-content:space-around;
     } 
     .footer_enroll {
-        margin: 20px
+        margin: 20px;
+    }
+    .enroll_btn {
+        width: 100px;
     }
     .footer_small_div_line {
         /* width: 85%; */
@@ -245,12 +250,29 @@
         margin-top: 5px;
         display: flex;
         justify-content: space-around;
-
     }
-    .footer_details_inner > p {
+    .footer_details_inner_up {
+        padding-left: 20%;
+    }
+    .footer_details_inner_up > p {
         font-size: 20px;
-        /* align-items: center; */
+        align-items: center;
+        align-self: center;
     }
+    .footer_details_inner_down {
+        margin: 0;
+        margin-top: 20px;
+        width: 80vw;
+    }
+    .footer_map-container {
+        /* max-width: 50%;  */
+        /* Adjust the width as needed */
+        height: 200px; 
+        width: auto;
+        /* Set a fixed height for the map container */
+        overflow: hidden; /* Hide any overflow */
+      }
+      
     .footer_logo_div {
         padding: 0;
         display: flex;
