--- a/src/Components/ContactUs/ContactUs.css
+++ b/src/Components/ContactUs/ContactUs.css
@@ -247,7 +247,7 @@
     }
     .email_image_small {
         width: auto;
-        height: 40ps;
+        height: 40px;
     }
     .location_image_small {
         width: auto;
